--- a/angular.json
+++ b/angular.json
@@ -58,10 +58,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "angular-course-2025:build:production"
+              "buildTarget": "angular-course-2025:build:production"
             },
             "development": {
-              "browserTarget": "angular-course-2025:build:development"
+              "buildTarget": "angular-course-2025:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -69,7 +69,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "angular-course-2025:build"
+            "buildTarget": "angular-course-2025:build"
           }
         },
         "test": {
